Tue Nov  3 23:24:52 CET 2015
	Undoing change from Sun Oct 25 15:29:23 CET 2015
	as the original code was counter-intuitive but
	correct, and the new code does break pipelining. -CG
	Releasing libmicrohttpd 0.9.45. -CG

Sat Oct 31 15:52:52 CET 2015
	Releasing libmicrohttpd 0.9.45. -CG

Tue Oct 27 12:08:02 CET 2015
	Rework deprecation maros: fix errors with old GCC versions,
	improved support for old clang and new GCC. -EG

Sun Oct 25 23:05:32 CET 2015
	Return correct header kind in MHD_get_connection_values()
	even if a bitmask is used for the "kind" argument. -FC/CG

Sun Oct 25 15:29:23 CET 2015
	Fixing transient resource leak affecting long-lived
	connections with many keep-alives and HTTP request
	pipelining under certain circumstances (which reduced
	the receive window).
	Fixed assertion failure triggered by a race in
	thread-per-connection mode on shutdown in rare
	circumstances. -CG

Mon Oct  5 11:53:52 CEST 2015
	Deduplicate code between digestauth and connection
	parsing logic for URI arguments, shared code moved
	to new MHD_parse_arguments_ function in internal.c. -CG

Thu Oct  1 21:22:05 CEST 2015
	Releasing libmicrohttpd 0.9.44. -CG

Wed Sep 30 21:05:38 CEST 2015
	Various fixes for W32 VS project files. - EG

Fri Sep 25 09:49:10 CEST 2015
	Fix digest authentication with URL arguments where
	value-less keys are given before the last argument.
	Thanks to MA for reporting. -CG

Tue Sep 22 19:17:54 CEST 2015
	Do not use shutdown() on listen socket if MHD_USE_PIPE_FOR_SHUTDOWN
	is set. -CG

Wed Sep 16 11:06:02 CEST 2015
	Releasing libmicrohttpd 0.9.43. -CG

Wed Sep  2 16:50:31 CEST 2015
 	Call resume_suspended_connections() when the user is running
	its own mainloop and calls MHD_run_from_select() to support
	resuming connections with external select. -FC

Sun Aug 30 14:53:51 CEST 2015
	Correct documentation as to when MHD_USE_EPOLL_LINUX_ONLY
	is allowed. -CG

Thu Aug 27 09:38:44 CEST 2015
	Reimplement monotonic clock functions for better